{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 19,
  "lineage": "b1424701-0bf5-6ea1-fa04-cce00047d70f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07fdfa2cf9263f516",
            "arn": "arn:aws:ec2:us-east-1:154061203144:elastic-ip/eipalloc-07fdfa2cf9263f516",
            "associate_with_private_ip": "10.0.2.100",
            "association_id": "eipassoc-0b1138f6b63b411ed",
            "domain": "vpc",
            "id": "eipalloc-07fdfa2cf9263f516",
            "instance": "i-03e2373d2c9ea1f39",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0059a9b0e846de1bc",
            "private_dns": "ip-10-0-2-100.ec2.internal",
            "private_ip": "10.0.2.100",
            "public_dns": "ec2-34-202-58-205.compute-1.amazonaws.com",
            "public_ip": "34.202.58.205",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "resume-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:154061203144:instance/i-03e2373d2c9ea1f39",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "CICD",
            "id": "i-03e2373d2c9ea1f39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "demokey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0059a9b0e846de1bc"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0059a9b0e846de1bc",
            "private_dns": "ip-10-0-2-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.100",
            "public_ip": "34.202.58.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0253effb0223524fd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04779a6c611012b56",
            "tags": {
              "Name": "master-server"
            },
            "tags_all": {
              "Name": "master-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f4a74a569de98212"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.niw-master",
            "aws_security_group.resume-sg",
            "aws_subnet.resume-subnet",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "resume-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:internet-gateway/igw-073082d12a3024e1f",
            "id": "igw-073082d12a3024e1f",
            "owner_id": "154061203144",
            "tags": {
              "Name": "resume-igw"
            },
            "tags_all": {
              "Name": "resume-igw"
            },
            "vpc_id": "vpc-01b8403f6d7685416"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "niw-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:network-interface/eni-0059a9b0e846de1bc",
            "attachment": [
              {
                "attachment_id": "eni-attach-015784f4f31e06f77",
                "device_index": 0,
                "instance": "i-03e2373d2c9ea1f39"
              }
            ],
            "id": "eni-0059a9b0e846de1bc",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:ee:8b:3e:97:59",
            "owner_id": "154061203144",
            "private_ip": "10.0.2.100",
            "private_ip_list": [
              "10.0.2.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0f4a74a569de98212"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04779a6c611012b56"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_subnet.resume-subnet",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "resume-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:route-table/rtb-0598f151042f16913",
            "id": "rtb-0598f151042f16913",
            "owner_id": "154061203144",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-073082d12a3024e1f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "resume-route"
            },
            "tags_all": {
              "Name": "resume-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b8403f6d7685416"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.resume-igw",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "resume-route_table-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b43c1a9e6c0d9b55",
            "route_table_id": "rtb-0598f151042f16913",
            "subnet_id": "subnet-04779a6c611012b56"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.resume-igw",
            "aws_route_table.resume-route",
            "aws_subnet.resume-subnet",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "resume-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group/sg-0f4a74a569de98212",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4a74a569de98212",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2377,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2377
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4789
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow tls",
            "name_prefix": "",
            "owner_id": "154061203144",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "resume-sg"
            },
            "tags_all": {
              "Name": "resume-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b8403f6d7685416"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "resume-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:subnet/subnet-04779a6c611012b56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04779a6c611012b56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "154061203144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "resume-subnet"
            },
            "tags_all": {
              "Name": "resume-subnet"
            },
            "vpc_id": "vpc-01b8403f6d7685416"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "resume-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:vpc/vpc-01b8403f6d7685416",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.2.0/24",
            "default_network_acl_id": "acl-04f5b023256fb32f6",
            "default_route_table_id": "rtb-0a03ddf0118d6cd4b",
            "default_security_group_id": "sg-0108198a00484c8fb",
            "dhcp_options_id": "dopt-001e3584aea96fecd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01b8403f6d7685416",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a03ddf0118d6cd4b",
            "owner_id": "154061203144",
            "tags": {
              "Name": "resume-vpc"
            },
            "tags_all": {
              "Name": "resume-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_docker_2377",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-0e7e7b6edc5c5b90d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2377,
            "id": "sgr-0e7e7b6edc5c5b90d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f4a74a569de98212",
            "security_group_rule_id": "sgr-0e7e7b6edc5c5b90d",
            "tags": null,
            "tags_all": {},
            "to_port": 2377
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_docker_4789_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-0a7ae842c164cfe24",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 4789,
            "id": "sgr-0a7ae842c164cfe24",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f4a74a569de98212",
            "security_group_rule_id": "sgr-0a7ae842c164cfe24",
            "tags": null,
            "tags_all": {},
            "to_port": 4789
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_docker_7946_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-02562253ce92de15a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 7946,
            "id": "sgr-02562253ce92de15a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f4a74a569de98212",
            "security_group_rule_id": "sgr-02562253ce92de15a",
            "tags": null,
            "tags_all": {},
            "to_port": 7946
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_docker_7946_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-0d9731679703785f1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 7946,
            "id": "sgr-0d9731679703785f1",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f4a74a569de98212",
            "security_group_rule_id": "sgr-0d9731679703785f1",
            "tags": null,
            "tags_all": {},
            "to_port": 7946
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-01a7193e6081e1bd2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-01a7193e6081e1bd2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f4a74a569de98212",
            "security_group_rule_id": "sgr-01a7193e6081e1bd2",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-0fd07c70d4ab020a9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0fd07c70d4ab020a9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f4a74a569de98212",
            "security_group_rule_id": "sgr-0fd07c70d4ab020a9",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:154061203144:security-group-rule/sgr-097a84185ad57e334",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-097a84185ad57e334",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f4a74a569de98212",
            "security_group_rule_id": "sgr-097a84185ad57e334",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.resume-sg",
            "aws_vpc.resume-vpc"
          ]
        }
      ]
    }
  ]
}